添加双向绑定代码

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,7 +24,8 @@
         <activity
             android:name=".LoginActivity"
             android:label="@string/title_activity_login" />
-        <activity android:name=".EasyActivity"></activity>
+        <activity android:name=".EasyActivity" />
+        <activity android:name=".TwowayActivity"></activity>
     </application>
 
 </manifest>
