layout表达式用法提交

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,11 +21,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity
-            android:name=".LoginActivity"
-            android:label="@string/title_activity_login" />
         <activity android:name=".EasyActivity" />
-        <activity android:name=".TwowayActivity"></activity>
+        <activity android:name=".TwowayActivity"/>
+        <activity android:name=".LayoutActivity" />
     </application>
 
 </manifest>
