增加几种用法

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,8 +22,10 @@
             </intent-filter>
         </activity>
         <activity android:name=".EasyActivity" />
-        <activity android:name=".TwowayActivity"/>
+        <activity android:name=".TwowayActivity" />
         <activity android:name=".LayoutActivity" />
+        <activity android:name=".ResActivity" />
+        <activity android:name=".IncludeActivity"></activity>
     </application>
 
 </manifest>
